fix switcher z-index

--- a/src/entities/switcher/Switcher.module.scss
+++ b/src/entities/switcher/Switcher.module.scss
@@ -7,7 +7,7 @@
 }
 
 .container {
-  z-index: 9999;
+  z-index: 100;
   position: absolute;
   width: 16px;
   height: 35px;
